--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "bootstrap": "^4.4.1",
     "init": "^0.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.4.0",
+    "redux": "^4.0.5",
     "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
